#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([test_autoconf], [0.1])
AC_CONFIG_SRCDIR([hello.cc])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([autoconf],[0.1])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile)
